--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -103,7 +103,7 @@
         app:layout_constraintTop_toBottomOf="@+id/email_register_til"
         app:layout_constraintVertical_bias="0.0">
 
-        <com.example.storyapp.MyEditText
+        <com.example.storyapp.customViews.MyEditText
             android:id="@+id/ed_register_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -115,7 +115,7 @@
             app:layout_constraintVertical_bias="0.0" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
+    <com.example.storyapp.customViews.MyCustomButton
         android:id="@+id/btn_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -123,6 +123,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:text="@string/register_button"
+        android:enabled="false"
         android:alpha="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/password_register_til"
