--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="orange_500">#FF5722</color>
     <color name="amber_500">#FFC107</color>
     <color name="green_500">#4CAF50</color>
+    <color name="light_green">#7DB17F</color>
     <color name="light_blue_500">#03A9F4</color>
     <color name="deep_purple_500">#9C27B0</color>
     <color name="yellow_500">#FFEB3B</color>
